<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valSuma"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSuma"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/txtSuma" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="47dp"
        android:text="@string/valRest"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:text="@string/valMult"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtMult"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="49dp"
        android:text="@string/valDiv"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="144dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtSuma"
        app:layout_constraintTop_toBottomOf="@+id/txtSuma" />

    <TextView
        android:id="@+id/txtMult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtResta"
        app:layout_constraintTop_toBottomOf="@+id/txtResta" />

    <TextView
        android:id="@+id/txtDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtMult"
        app:layout_constraintTop_toBottomOf="@+id/txtMult" />
</androidx.constraintlayout.widget.ConstraintLayout>