<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        android:text="@string/valTxtVwValor1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/etValor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etValor1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:text="@string/valTxtVwValor2"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/etValor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etValor2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etValor1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="58dp"
        app:layout_constraintBottom_toTopOf="@+id/etValor2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etValor2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="71dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/etValor1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="161dp"
        android:layout_height="0dp"
        android:layout_marginBottom="281dp"
        android:text="@string/btnSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor2" />
</androidx.constraintlayout.widget.ConstraintLayout>